@@ -4,6 +4,8 @@ import br.movely.movelyapp.model.Ranking;
 import br.movely.movelyapp.service.RankingService;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -23,13 +25,12 @@ public class RankingController {
             @PathVariable UUID groupId,
             @PathVariable UUID challengeId) {
 
-        List<Long> users = List.of(1L, 2L, 3L);
+        List<Long> users = Arrays.asList(1L, 2L, 3L);
 
-        Map<Long, Double> scores = Map.of(
-                1L, 100.0,
-                2L, 200.0,
-                3L, 150.0
-        );
+        Map<Long, Double> scores = new HashMap<>();
+        scores.put(1L, 100.0);
+        scores.put(2L, 200.0);
+        scores.put(3L, 150.0);
 
         return rankingService.generateRanking(groupId, challengeId, users, scores);
     }
